[package]
name = "lesbin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.28.1"
hex = "0.4.3"
itertools = "0.13.0"
memchr = "2.7.6"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[profile.release]
panic = "abort"
strip = true
lto = true
